2003-04-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/callframe.m:
	* Source/cifframe.m:
	Fix error in returning data via pointer arguments ... was writing to
	wrong memory location.
	* Source/GSFFCallInvocation.m: minor tidy up.
	* Source/NSArchiver.m: Structure encoding/decoding fixes.
	* Source/NSData.m: Structure encoding/decoding fixes.
	* Source/NSPortCoder.m: Structure encoding/decoding fixes.
	Manage memory used by decoded pointers (including c-strings).
	* Source/NSUnarchiver.m: Structure encoding/decoding fixes.
	* Source/NSConnectiom.m: Don't try to autorelease decoded pointers.
	* Testing/server.h: Make large structure have tricky layout.
	* Testing/nsconnection_client.m: Add harder structure test.
	* Testing/nsconnection_server.m: Add harder structure test.

2003-04-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m:
	* Source/NSData.m:
	* Source/NSSerializer.m:
	* Source/NSURL.m:
	Replace __alignof__() with calls to objc_alignof_type() so that if
	__alignof__() is broken we can hope that the objc runtime library
	has a workaround.

2003-04-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/Foundation.h: Include GNUstep extensions
	from GSCategories.h

2003-04-08 15:37  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSCalendarDate.m (-initWithString:calendarFormat:locale:):
	Fix assignment of 'found' in %z handling.

2003-04-07 13:21  Alexander Malmberg <alexander@malmberg.org>

	* configure.ac:	Link directly to the foreign function interfaces
	section in the build guide in the error message for missing ffi
	library.

	* configure: Regenerate.

2003-04-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSCategories.h (GS_USEIDLIST and
	GS_USEIDPAIRLIST): Complete implementation and testing.
	* Source/NSDictionary.m: Use macro.

2003-04-06 23:30  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/base/GSCategories.h (GS_USEIDLIST): Make the